tests/should_fail/syntax_if_let_non_option.nv
module main

// SHOULD FAIL: if let on a non-Option (String)
fn test() {
    let s = "hello"
    if let v = s {
        println(v)
    }
}
test()
